--- a/article_tuwen.htm
+++ b/article_tuwen.htm
@@ -12,13 +12,13 @@
 </head>
 <body>
 	
-	<!--Í·²¿-->
+	<!--å¤´éƒ¨-->
 	{dede:include filename="head_xh.htm"/}
 	
 <div class="boxer">
   <div class="crumbs"> <a>&gt;{dede:field name='position'/}</a></div>
 	
-<!--Ö¯ÃÎ µ÷ÓÃÎÄÕÂ±êÇ©ÒıÓÃ´úÂëdede:field.description ¿ª´Ë-->	
+<!--ç»‡æ¢¦ è°ƒç”¨æ–‡ç« æ ‡ç­¾å¼•ç”¨ä»£ç dede:field.description å¼€æ­¤-->	
   <div class="viewbox">
   <div class="title">
    <h2 align="center">{dede:field.title/}</h2>
@@ -45,7 +45,7 @@
    </ul>
   </div>
 </div>
-<!--Ö¯ÃÎ µ÷ÓÃÎÄÕÂ±êÇ©ÒıÓÃ´úÂëdede:field.description½áÊø-->	
+<!--ç»‡æ¢¦ è°ƒç”¨æ–‡ç« æ ‡ç­¾å¼•ç”¨ä»£ç dede:field.descriptionç»“æŸ-->	
 	
 <div class="doctjy">
 		<img class="bimg" src="{dede:global.cfg_cmspath/}/images/bot_zx.jpg"/>
@@ -60,17 +60,17 @@
 </div>
 		<div class="yhact">
 			<img class="bimg" src="{dede:global.cfg_cmspath/}/images/yhactimg.png"/>
-			
+			<div class="abcd>
 		</div>
 </div>
 <script type="text/javascript">
 			TouchSlide({
 				slideCell: "#zdoctbox",
-				titCell: ".hd ul", //¿ªÆô×Ô¶¯·ÖÒ³ autoPage:true £¬´ËÊ±ÉèÖÃ titCell Îªµ¼º½ÔªËØ°ü¹ü²ã
+				titCell: ".hd ul", //å¼€å¯è‡ªåŠ¨åˆ†é¡µ autoPage:true ï¼Œæ­¤æ—¶è®¾ç½® titCell ä¸ºå¯¼èˆªå…ƒç´ åŒ…è£¹å±‚
 				mainCell: ".bd ul",
 				effect: "leftLoop",
-				autoPage: true, //×Ô¶¯·ÖÒ³
-				autoPlay: false //×Ô¶¯²¥·Å
+				autoPage: true, //è‡ªåŠ¨åˆ†é¡µ
+				autoPlay: false //è‡ªåŠ¨æ’­æ”¾
 			});
 		</script>
 	
